2013-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ttml-play.sh:
	  - Make test script more comfortable by removing background animation.

2013-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango):
	  - Enable usage of a comma-separated list of fonts in the font_family tag.
	    This involved a few workarounds for Pango Markup 'quirks'...

2013-04-29  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_sax2_element_start_ns):
	  - Fix warning on Linux.

2013-04-26  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstate.c:
	* src/gstttmlattribute.c:
	* src/gstttmlattribute.h:
	* src/gstttmlparse.c:
	* src/gstttmlutils.c:
	* src/gstttmlutils.h:
	  - Obey only nodes and attributes in the TTML or XML namespaces and ignore
	    the rest. This has no effect at all in the test files we have, but
	    makes the Foreign001.xml test pass for the correct reason now (the node
	    is discarded due to its namespace, not its lack of timing information).
	  - This introduces lots of extra strcmp's only to ignore bogus nodes in
	    malformed TTML files, but...

2013-04-26  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstate.c:
	  - Remove bogus warning when applying empty styles.

2013-04-26  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c:
	  - Use SAX2 interface instead of SAX, to simplify later processing of
	    namespaces.

2013-04-26  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c:
	  - Whitespace in comments.

2013-02-13  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.5 ===

2013-02-13  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_chain):
	  - Fix warning in 64-bits builds.

2013-02-12  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_time_expression),
	(gst_ttml_attribute_parse):
	  - Avoid using the system's locale with sscanf (fixes